curses: call resizeterm if getch issues KEY_RESIZE

This fixes PR #53633.